Wrapping up next round. Up to step 4 + Basic styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
   <h1>Js Spreadsheet</h1>
   <button id="js-redraw">Redraw</button>
-  <button id="js-clear">Clear</button>
-  <button id="js-save">Save</button>
+  <button id="js-clear">Clear (Coming Soon™)</button>
+  <button id="js-save">Save (Coming Soon™)</button>
   <div id="js-spreadsheet"></div>
   <script src="js/main.js"></script>
 </body>
